--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,7 +88,7 @@ INCLUDE_DIRECTORIES(
     )
 
 #to copy a directory (e.g. test files) to another.
-FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/testdata DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/testdata)
+FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/testdata DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 IF(DOXYGEN_FOUND)
     #convert semicolon-seperated list to whitespace-seperated one
