Some changes to build details
git-svn-id: file:///mnt/svn/libmusicaccess/trunk@734 0c85f470-1217-11de-aba5-9925624bc3b7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,9 @@ TARGET_LINK_LIBRARIES(musicaccess
     ${SNDFILE_LIBRARIES}
     ${MPG123_LIBRARIES}
     )
+SET_TARGET_PROPERTIES(musicaccess
+    PROPERTIES COMPILE_FLAGS "-fPIC -shared"
+    )
 
 #add unit tests here
 ENABLE_TESTING()
@@ -141,6 +144,9 @@ ADD_EXECUTABLE(musicaccesstests
 TARGET_LINK_LIBRARIES(musicaccesstests
     ${SNDFILE_LIBRARIES}
     ${MPG123_LIBRARIES}
+    )
+SET_TARGET_PROPERTIES(musicaccesstests
+    PROPERTIES COMPILE_FLAGS "-fPIC -shared"
     )
 #use "make test" to start all tests.
 
