added some documentation
git-svn-id: file:///mnt/svn/libmusicaccess/trunk@740 0c85f470-1217-11de-aba5-9925624bc3b7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,3 +223,7 @@ FILE(GLOB music_global_headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
 INSTALL (FILES ${music_global_headers}
     DESTINATION include
     )
+FILE(GLOB music_special_headers "${CMAKE_CURRENT_SOURCE_DIR}/src/musicaccess/*.hpp")
+INSTALL (FILES ${music_special_headers}
+    DESTINATION include/musicaccess
+    )
