moved library functions into namespace musicaccess

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,15 +153,17 @@ SET_PROPERTY(DIRECTORY
         ADDITIONAL_MAKE_CLEAN_FILES "*.wav")
 
 IF(MATLAB_FOUND)
-    ADD_TEST(fft-wave-matlab                "matlab" "wav2fft.m" "*.wav")
-    SET_TESTS_PROPERTIES(fft-wave-matlab PROPERTIES DEPENDS iirfilter)
-    SET_TESTS_PROPERTIES(fft-wave-matlab PROPERTIES DEPENDS resampling)
+    ADD_TEST(fft-iirfilter-matlab                 "matlab" "wav2fft.m" "filtered*.wav")
+    ADD_TEST(fft-resampling-matlab                "matlab" "wav2fft.m" "resampled*.wav")
+    SET_TESTS_PROPERTIES(fft-iirfilter-matlab PROPERTIES DEPENDS iirfilter)
+    SET_TESTS_PROPERTIES(fft-resampling-matlab PROPERTIES DEPENDS resampling)
     FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/tests/wav2fft.m DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 ELSE(MATLAB_FOUND)
     IF(OCTAVE_FOUND)
-        ADD_TEST(fft-wave-octave                ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "*.wav")
-        SET_TESTS_PROPERTIES(fft-wave-octave PROPERTIES DEPENDS iirfilter)
-        SET_TESTS_PROPERTIES(fft-wave-octave PROPERTIES DEPENDS resampling)
+        ADD_TEST(fft-iirfilter-octave                ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "filtered*.wav")
+        ADD_TEST(fft-resampling-octave                ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "resampled*.wav")
+        SET_TESTS_PROPERTIES(fft-iirfilter-octave PROPERTIES DEPENDS iirfilter)
+        SET_TESTS_PROPERTIES(fft-resampling-octave PROPERTIES DEPENDS resampling)
         FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/tests/wav2fft.m DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     ENDIF(OCTAVE_FOUND)
 ENDIF(MATLAB_FOUND)
