added butterworth filter of order 6 as lowpass filter
added sorting iir-filter algorithm. thought it might get better results, but the results don't differ. why?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,8 @@ ADD_TEST(soundfile                 "musicaccesstests" "soundfile")
 
 ADD_TEST(iirfilter                 "musicaccesstests" "iirfilter")
 SET_TESTS_PROPERTIES(iirfilter PROPERTIES DEPENDS soundfile)
+ADD_TEST(sortingiirfilter          "musicaccesstests" "sortingiirfilter")
+SET_TESTS_PROPERTIES(sortingiirfilter PROPERTIES DEPENDS soundfile)
 
 ADD_TEST(resampling                "musicaccesstests" "resampling")
 SET_TESTS_PROPERTIES(resampling PROPERTIES DEPENDS soundfile)
@@ -154,6 +156,7 @@ SET_PROPERTY(DIRECTORY
 
 IF(MATLAB_FOUND)
     ADD_TEST(fft-iirfilter-matlab                 "matlab" "wav2fft.m" "filtered*.wav")
+    ADD_TEST(fft-sortingiirfilter-matlab          "matlab" "wav2fft.m" "sortfiltered*.wav")
     ADD_TEST(fft-resampling-matlab                "matlab" "wav2fft.m" "resampled*.wav")
     SET_TESTS_PROPERTIES(fft-iirfilter-matlab PROPERTIES DEPENDS iirfilter)
     SET_TESTS_PROPERTIES(fft-resampling-matlab PROPERTIES DEPENDS resampling)
@@ -161,7 +164,8 @@ IF(MATLAB_FOUND)
 ELSE(MATLAB_FOUND)
     IF(OCTAVE_FOUND)
         ADD_TEST(fft-iirfilter-octave                ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "filtered*.wav")
-        ADD_TEST(fft-resampling-octave                ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "resampled*.wav")
+        ADD_TEST(fft-sortingiirfilter-octave         ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "sortfiltered*.wav")
+        ADD_TEST(fft-resampling-octave               ${OCTAVE_EXECUTABLE} "--path" ${CMAKE_CURRENT_BINARY_DIR} "wav2fft.m" "resampled*.wav")
         SET_TESTS_PROPERTIES(fft-iirfilter-octave PROPERTIES DEPENDS iirfilter)
         SET_TESTS_PROPERTIES(fft-resampling-octave PROPERTIES DEPENDS resampling)
         FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/tests/wav2fft.m DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
