should now be able to read metadata, but does not read it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,10 @@ ELSEIF (CMAKE_BUILD_TYPE STREQUAL Profiling)
     ADD_DEFINITIONS(-DNDEBUG)
 ENDIF ()
 
+IF (DEBUG_LEVEL)
+    ADD_DEFINITIONS(-DDEBUG_LEVEL=${DEBUG_LEVEL})
+ENDIF()
+
 #here, you would set some compiler specific things
 IF ( CMAKE_COMPILER_IS_GNUCXX )
     MESSAGE ("Using Gnu g++ compiler...")
